2001-11-27  Sam Steingold  <sds@gnu.org>

	* array.d (SIMPLE_FILL, SIMPLE_REVERSE, SIMPLE_NREVERSE): new macros
	(elt_fill): use SIMPLE_FILL
	(elt_reverse): use SIMPLE_REVERSE
	(elt_nreverse): use SIMPLE_NREVERSE

2001-11-27  Sam Steingold  <sds@gnu.org>

	* stream.d (READ-INTEGER, READ-FLOAT, WRITE-INTEGER, WRITE-FLOAT):
	use elt_nreverse() instead of inline code

2001-11-19  Sam Steingold  <sds@gnu.org>

	more consistent floating point computations: (log -1d0) =>
	#C(0.0d0 3.141592653589793d0), not #C(0.0d0 3.1415927f0)
	* realelem.d (defaultfloatcase): accept NUM arg
	(I_float_F, RA_float_F): update accordingly
	* realtran.d (pi): accept an arg and pass it to defaultfloatcase()
	(R_R_atan_R): pass an argument to pi()
	* comptran.d (R_R_atanh_R_R, R_R_asinh_R_R, N_acos_N, N_acosh_N):
	pass an argument to pi()
	* flo_rest.d (floatcase): envelop in "do{}while(0)"
	* lisparit.d (read_float): pass Fixnum_0 to defaultfloatcase()

2001-11-19  Sam Steingold  <sds@gnu.org>

	Move all deprecated functionality to deprecated.lisp
	* compiler.lisp (*deprecated-functions-list*): took SPECIAL-FORM-P
	and GET-SETF-METHOD-MULTIPLE-VALUE out
	* init.lisp (export "EXT"): ditto
	* defs1.lisp (special-form-p): moved to deprecated.lisp
	* places.lisp (get-setf-method-multiple-value)
	(define-setf-method): ditto
	* deprecated.lisp (special-form-p, get-setf-method-multiple-value)
	(define-setf-method): added and deprecated
	* describe.lisp (describe-object): macros can be deprecated too,
	give the new name for the deprecated functionality

2001-11-11  Bruno Haible  <haible@clisp.cons.org>

	Support for Intel icc on Linux/i386.
	* autoconf/aclocal.m4 (CL_STRLEN): When checking for the return type,
	prefer size_t over int. Avoids icc warning.
	* lispbibl.d (INTEL): New macro.
	(NULL): Don't define if INTEL. Avoids icc warning.
	(ASM_get_SP_register, SP, setSP): Use same asm based statement
	expression when using Intel icc as when using gcc.
	* genclisph.d (main): Likewise.