@@ -1,3 +1,9 @@
+2001-11-28  Sam Steingold  <sds@gnu.org>
+
+	* pathname.d (MAKE-PATHNAME): revert the 2001-07-20 patch: :case
+	applies only to strings, not pathnames in the :default arg
+	Reported by Kent M Pitman <pitman@world.std.com>
+
 2001-11-27  Sam Steingold  <sds@gnu.org>
 
 	* array.d (SIMPLE_FILL, SIMPLE_REVERSE, SIMPLE_NREVERSE): new macros
